Upgrade dependencies and remove lots of Dapla1 stuff (#14)
* Upgrade dependencies and remove lots of Dapla1 stuff

This is to prepare for running the pseudo service on a per team basis.

* Skip sonar analysis

* Update Dockerfile, bump base image

* Update Dockerfile, use latest 17-slim-bullseye

* Update Docker base image